tasks can no longer be dragged off screen

--- a/client/style.css
+++ b/client/style.css
@@ -13,6 +13,10 @@
     height:15%;
     background-color:lightskyblue;
 }
+#dashboard{
+    width:100%;
+    height:85%;
+}
 body{
     margin: 0px;
 }
